operator/pkg/model/ingestion/testdata/gateway/cert_manager_gateway/input-service.yaml
- metadata:
    creationTimestamp: null
    name: echo-a-internal
    namespace: default
  spec: {}
  status:
    loadBalancer: {}
